--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Project exclude paths
 /venv/
 .idea/inspectionProfiles/
+.idea/*.xml
+.idea/*.iml
 __pycache__/
 src/__pycache__/
 test/__pycache__/
